--- a/estaciones/05-agentes.html
+++ b/estaciones/05-agentes.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estación 5: Taller de Agentes - Odisea IA</title>
+    <link rel="icon" href="https://www.migtutor.com/img/fav_blanco.webp" type="image/webp">
     
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
